css/style.css
/* ... */
@media screen and (min-width: 1200px) {
  h5, .h5 {
    font-size: 22px;
  }
}

h6, .h6 {
  font-weight: bold;
}

h6, .h6 {
  font-size: 16px;
}

@media screen and (min-width: 320px) {
  h6, .h6 {
    font-size: calc(16px + 4 * ((100vw - 320px) / 880));
  }
}

@media screen and (min-width: 1200px) {
  h6, .h6 {
    font-size: 20px;
  }
}

p {
  font-size: 16px;
}

@media screen and (min-width: 320px) {
  p {
    font-size: calc(16px + 4 * ((100vw - 320px) / 880));
  }
}

@media screen and (min-width: 1200px) {
  p {
    font-size: 20px;
  }
}

ol,
ul {
  padding-left: 1.5em;
}

.popover ol:last-child, .popover
ul:last-child {
  margin-bottom: 0;
}

.align-center {
  text-align: center;
}

.align-center img {
  margin-left: auto;
  margin-right: auto;
}

.extlink .svg-inline--fa.fa-w-16 {
  width: 0.8em;
  margin-left: 0.2em;
}

.extlink span.fa-ext {
  font-size: .8em;
  margin-left: 0.2em;
}

.extlink span.fa-envelope-o {
  font-size: .8em;
  margin-left: 0.2em;
}

.field--label:after {
  content: ':';
}

.no-field-label-colon .field--label:after,
.no-field-label-colon .field__label:after,
.no-field-label-colon .field--label-inline .field--label:after {
  content: '';
}

.field-label-colon .field--label:after,
.field-label-colon .field__label:after,
.field-label-colon .field--label-inline .field--label:after {
  content: ':';
}

.unpublished {
  color: red;
  text-align: center;
}

.page-title {
  background: #BBE3F2;
  border-radius: 4px;
  border: 1px solid #9DC4D7;
  position: relative;
  z-index: 1;
  padding: 1px;
  color: #0F3C4D;
  margin: 5px 0px;
  text-align: center;
}

.logo {
  max-width: 377px;
  max-height: 190px;
}

.logo img {
  width: 100%;
}

#block-sitetitle {
  display: inline-block;
  width: 100%;
}

.navbar-brand {
  color: #293C98;
  font-size: 1.2em;
  padding: 0;
  width: 100%;
}

.navbar-brand:hover {
  color: #293C98;
}

.navbar-text {
  box-sizing: border-box;
  font-family: 'Neuzeit Grotesk', Tahoma, Arial, Helvetica, Sans-Serif;
  text-decoration: none;
  line-height: normal;
  margin: 0;
  padding: 0;
  color: #fff;
  text-align: center;
  text-shadow: 2px 2px 2px #00000080;
  width: 100%;
  font-size: 1.5em;
}

#header {
  display: flex;
  flex-flow: row wrap;
  margin-bottom: 1em;
  padding: 0;
}

#header .region-header-top {
  flex: 100%;
  margin-bottom: 0.5em;
}

#header .region-header-left,
#header .region-header-mid,
#header .region-header-right {
  flex: 1 1 30%;
}

#header .region-header-mid {
  padding: 0 1em;
  box-sizing: content-box;
}

#header .region-header-bottom {
  flex: 100%;
  margin-top: 0.5em;
}

#navbar {
  background-color: unset;
  border: unset;
  text-align: center;
}

#navbar .navbar-header {
  float: none;
}

#navbar .menu--main {
  float: none;
}

#navbar .menu--main > li {
  margin-left: 5px;
  float: none;
  display: inline-block;
}

#navbar .menu--main > li > a {
  text-decoration: none;
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}

#navbar .menu--main > li:hover > a,
#navbar .menu--main > li.active-trail > a {
  background: #96C8DE;
  border-radius: 4px;
  border: 1px dotted rgba(40, 161, 204, 0.9);
  color: #0C2F3C;
  text-shadow: 2px 2px 2px rgba(245, 245, 245, 0.5);
}

#navbar .menu--main > li:hover > a.dropdown-toggle {
  border-bottom: 0;
  border-radius: 4px 4px 0 0;
}

#navbar .menu--main > li:hover > a.dropdown-toggle + ul {
  border-top-left-radius: 0;
}

#navbar .menu--main > li:first-child {
  margin-left: 0px;
}

#navbar .menu--main li.dropdown:hover > ul.dropdown-menu {
  display: block;
}

#navbar .menu--main li.dropdown:hover > ul.dropdown-menu li.dropdown:hover > ul.dropdown-menu {
  position: absolute;
  left: 100%;
  top: 0;
}

#navbar .menu--main a {
  border: 1px solid transparent;
  font-weight: bold;
  text-decoration: none;
  text-transform: uppercase;
  text-align: left;
  outline: none;
  position: relative;
  z-index: 11;
  display: block;
  height: 41px;
  cursor: pointer;
  color: white;
  line-height: 41px;
  border-radius: 4px;
  padding: 0 0.1em;
  margin: 0 auto;
}

@media (min-width: 827px) {
  #navbar .menu--main a {
    padding: 0 10px;
  }
}

#navbar .menu--main ul.dropdown-menu {
  background: #96C8DE;
  border-radius: 4px;
  border: 1px dotted rgba(40, 161, 204, 0.9);
  margin: 0 auto;
  padding: 0 !important;
  position: absolute;
  width: auto;
  z-index: 1;
}

#navbar .menu--main ul.dropdown-menu li:last-child a {
  border: 0px;
}

#navbar .menu--main ul.dropdown-menu li:hover {
  background: #1A6884;
}

#navbar .menu--main ul.dropdown-menu li:hover > ul {
  left: calc(100% + 2px);
}

#navbar .menu--main ul.dropdown-menu li:hover > a {
  color: white;
  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
}

#navbar .menu--main ul.dropdown-menu li a {
  border-bottom: 1px dotted rgba(40, 161, 204, 0.9);
  text-align: left;
  color: #0C2F3C;
  text-decoration: none;
  text-shadow: 2px 2px 2px rgba(245, 245, 245, 0.5);
  white-space: nowrap;
}

#navbar .menu--main ul.dropdown-menu li a:hover {
  background-color: unset;
}

.region-help {
  background: #E2EDF3;
  border-radius: 10px;
  border: 3px solid #9DC4D7;
  padding: 5px;
  margin: 5px auto;
  box-sizing: border-box;
}

.region-help .alert {
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

.region-help .alert:last-child {
  margin-bottom: 0;
}

.main-container .region-content {
  background: #E2EDF3;
  border-radius: 10px;
  border: 3px solid #9DC4D7;
  padding: 5px;
  margin: 5px auto;
  box-sizing: border-box;
}

.main-container > .row {
  display: flex;
  flex-flow: row wrap;
}

.main-container > .row .midbar {
  width: unset;
  flex: 1 1 calc(50% - 30px);
}

.main-container > .row .sidebar-1,
.main-container > .row .sidebar-2 {
  width: unset;
  flex: 1 1 calc(25% - 30px);
}

.main-container > .row .sidebar-1 {
  padding: 0 0 0 0.5em;
}

.main-container > .row .sidebar-2 {
  padding: 0 0.5em 0 0;
}

#bottom {
  display: flex;
  flex-flow: row wrap;
}
/* ... */

